tests/invalid/closure/duplicate_capture_name.facet
fn main() -> unrestricted isize {
    let y: unrestricted isize = 7 in
    let f = closure [y, y](x: unrestricted isize) -> unrestricted isize { y } in
    (f 1)
}
